IDE/Intellij project setup note